--- a/pokemon.html
+++ b/pokemon.html
@@ -36,6 +36,8 @@
 </script>
 <script>
     $(document).ready(function () {
+        var enteiID = 224;
+
         $('#pokemonList').append('' +
         '<tr>' +
         '<td width="50%" style="border-right: 1px solid black; padding-left: 6px; vertical-align: top;">' +
@@ -46,7 +48,7 @@
         '<img height="96px" width="96px" src="244.png" alt=""/>' +
         '</td>' +
         '<td>' +
-        '<img id="pokemon244" height="96px" width="96px" src="X.png" alt="" style="cursor: pointer;"/>' +
+        '<img id=\"pokemon'+enteiID+'\" height="96px" width="96px" src="X.png" alt="" style="cursor: pointer;"/>' +
         '</td>' +
         '</tr>' +
         '');
